grassfeeder (0.0.5) unstable; urgency=low

  * StatusBar: copy Feed address into clipboard
  * Multiple instances shall not be allowed
  * Cleanup messages at configured upper limit, also double same messages
  * On Shutdown:  Flush Databases
  * Build via Docker container
  * Bugfix:  on start create logging folder
  * Refactored test for new_entries_filter
  * Sanitize databases via command line, no more automatic
  
  
  - Bug: Fetch-All shall not include folder scheduling
  
  - Add default set of feeds on new configuration
  
  https://rss.golem.de/rss.php?feed=ATOM1.0
  https://xkcd.com/atom.xml
  https://blog.linuxmint.com/?feed=rss2
  https://rss.slashdot.org/Slashdot/slashdot
  https://github.com/schleglermarcus/grassfeeder/releases.atom
  http://blog.rust-lang.org/feed.xml
  
  
  - Umlaut in name at New-Feed  https://www.ksta.de/feed/index.rss
  - Check: &  in Feed-title, Message-title. should be escaped

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Fri, 18 Sep 2022 00:12:00 +0000

grassfeeder (0.0.4) unstable; urgency=low

  * Startup Commandline processing fixed:    -h shall remain on commandline
  * Drag: Folder down - fixed
  * GTK-Liststore for inserting switch off sorting, else slow. Solved by using pixbuf cache
  * Created debian changelog
  * Subscription_state: merge extra booleans
  * Remove section_name, Remove Package Ini
  * Shutdown Integration Test, gtk-updater: catching row-too-short nullpointer
  * Subscription Edit Dialog: show Homepage
  * Prevent simultaneous accesses for the same domain

 -- Marcus der Schlegler <schleglermarcus@posteo.de>  Fri, 16 Sep 2022 00:12:00 +0000

grassfeeder (0.0.3) unstable; urgency=low

  * refactored subscriptions to sqlite
  * cleaning out deleted subscriptions
  * Tree Unread-Calculation Speed increased, parallel web requests to 3
  * fixed: message tooltip needs escaping
  * remove icon dialog, leave it on  debug flag
  * SendToBrowser :   mark-as-read for all entries
