@@ -7,10 +7,12 @@ grassfeeder (0.0.5) unstable; urgency=low
   * Build via Docker container
   * Bugfix:  on start create logging folder
   * Refactored test for new_entries_filter
-  * Sanitize databases via command line, no more automatic
+  
+  * Databases check via command line, no more automatic
+  
+  - Databases check shall remove doubled messages
   
   
-  - Bug: Fetch-All shall not include folder scheduling
   
   - Add default set of feeds on new configuration
   
@@ -24,6 +26,7 @@ grassfeeder (0.0.5) unstable; urgency=low
   
   - Umlaut in name at New-Feed  https://www.ksta.de/feed/index.rss
   - Check: &  in Feed-title, Message-title. should be escaped
+  - Bug: Fetch-All shall not include folder scheduling
 
  -- Marcus der Schlegler <schleglermarcus@posteo.de>  Fri, 18 Sep 2022 00:12:00 +0000
 
